--- a/appsettings.json
+++ b/appsettings.json
@@ -1,15 +1,11 @@
 ﻿{
+  "AppSettings": {
+    "Secret": "u9t9ji0fmsdmv r4jgnr9mvepvdo n49t3"
+  },
   "Logging": {
     "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "LogLevel": {
+      "Default": "Warning"
     }
   }
 }
